47 Dynamic Pages with templating

--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -5,6 +5,7 @@
     </head>
     
     <body>
-        <h1> Help page </h1>
+        <h1> {{title}} </h1>
+        <p>created by {{name}}</p>
     </body>
 </html>
