--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -6,7 +6,9 @@
     </head>
     
     <body>
-        <h1> From a Static file</h1>
+        
+        <h1> {{title}}</h1>
         <img src="/img/me.jpg">
+        <p>created by {{name}}</p>
     </body>
 </html>
