--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -5,6 +5,7 @@
     </head>
     
     <body>
-        <h1> About page </h1>
+        <h1> {{title}} </h1>
+        <p>{{name}}</p>
     </body>
 </html>
