--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> About</title>
+        <title>404</title>
         <link rel ="icon" href="/img/weather.png">
-        <link rel="stylesheet" href = "css/styles.css">
+        <link rel="stylesheet" href = "css/styles.css">     
     </head>
     
     <body>
-
-
         <div class="main-content">
             {{>header}}
-            <img class ="portrait" src="/img/me.jpg">
-            <p> some text about....</p>
+            <p>{{errorMessage}}</p>
         </div>
+
         {{>footer}}
     </body>
 </html>
