--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Weather</title>
+        <link rel ="icon" href="/img/weather.png">
         <link rel="stylesheet" href = "css/styles.css">     
         <script src="/js/app.js"></script>   
     </head>
     
     <body>
-        
-        {{>header}}
+        <div class ="main-content">
+            {{>header}}   
+            <p> Use this site to get your weather!</p>
+        </div>
 
-        <img src="/img/me.jpg">
         {{>footer}}
     </body>
+
 </html>
